--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,11 +8,13 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.12.0-0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
+  flutter_hooks: ^0.16.0-nullsafety.0
+  hooks_riverpod: ^0.14.0+3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
