--- a/.gitignore
+++ b/.gitignore
@@ -44,6 +44,7 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+/android/app/src
 
 lib/quiz_data.dart
 lib/advertising.dart
