--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ dependencies:
   flutter_hooks: ^0.16.0-nullsafety.0
   hooks_riverpod: ^0.14.0+3
   shared_preferences: ^2.0.5
-  google_mobile_ads: ^0.11.0+3
+  google_mobile_ads: ^0.12.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
