--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,9 +26,14 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_native_splash: ^1.1.8+4
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
+
+flutter_native_splash:
+  image: "assets/icons/small-logo.png"
+  color: "220000"
 
 # The following section is specific to Flutter.
 flutter:
@@ -39,6 +44,13 @@ flutter:
 
   assets:
     - assets/images/background.png
+    - assets/images/lecture1.png
+    - assets/images/lecture2.png
+    - assets/images/lecture3.png
+    - assets/images/lecture4.png
+    - assets/images/lecture5.png
+    - assets/images/lecture6.png
+    - assets/images/lecture_hint.png
     - assets/sounds/bgm.mp3
     - assets/sounds/correct_answer.mp3
     - assets/sounds/tap.mp3
