--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -34,11 +34,12 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.example.lateral_thinking"
-        minSdkVersion 19
+        applicationId "io.github.naoto613.lateral_thinking"
+        minSdkVersion 21
         targetSdkVersion 30
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
+        multiDexEnabled true
     }
 
     buildTypes {
