--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,9 +18,8 @@ dependencies:
   shared_preferences: ^2.0.5
   google_mobile_ads: ^0.12.2
   audioplayers: ^0.18.3
+  firebase_messaging: "^10.0.0"
 
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
 
 dev_dependencies:
