--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,15 +16,13 @@ dependencies:
   flutter_hooks: ^0.16.0-nullsafety.0
   hooks_riverpod: ^0.14.0+3
   shared_preferences: ^2.0.5
-  google_mobile_ads: ^0.12.2
+  google_mobile_ads: ^0.12.2 # isoのビルドの際にクラッシュする(Androidではsdkバージョンを上げる必要がある)
   audioplayers: ^0.19.0
-  firebase_messaging: "^10.0.0"
-  flutter_staggered_animations: "^1.0.0"
+  firebase_messaging: "^10.0.0" # isoのビルドの際に落ちる
   awesome_dialog: ^2.1.0
   flutter_spinkit: "^5.0.0"
-
-  cupertino_icons: ^1.0.2
   lottie: ^1.0.1
+  cupertino_icons: ^1.0.2
 
 dev_dependencies:
   flutter_test:
