--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,7 +5,7 @@ description: This is literal thinking game for one.
 # pub.dev using `pub publish`. This is preferred for private packages.
 publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
-version: 1.0.0+1
+version: 1.0.6+7
 
 environment:
   sdk: ">=2.12.0-0 <2.15.0"
@@ -16,9 +16,9 @@ dependencies:
   flutter_hooks: ^0.16.0-nullsafety.0
   hooks_riverpod: ^0.14.0+3
   shared_preferences: ^2.0.5
-  google_mobile_ads: ^0.12.2 # isoのビルドの際にクラッシュする(Androidではsdkバージョンを上げる必要がある)
+  google_mobile_ads: ^0.12.2
   audioplayers: ^0.19.0
-  firebase_messaging: "^10.0.0" # isoのビルドの際に落ちる
+  firebase_messaging: "^10.0.0"
   awesome_dialog: ^2.1.0
   flutter_spinkit: "^5.0.0"
   lottie: ^1.0.1
