多言語対応

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
+  intl: ^ 0.17.0
   flutter_hooks: ^0.16.0-nullsafety.0
   hooks_riverpod: ^0.14.0+3
   shared_preferences: ^2.0.5
@@ -38,15 +41,13 @@ flutter_native_splash:
 
 # The following section is specific to Flutter.
 flutter:
-  # The following line ensures that the Material Icons font is
-  # included with your application, so that you can use the icons in
-  # the material Icons class.
   uses-material-design: true
 
   assets:
     - assets/images/
     - assets/sounds/
     - assets/lottie/
+    - assets/locale/
 
   fonts:
     - family: NotoSerifJP
@@ -60,3 +61,5 @@ flutter:
     - family: SawarabiGothic
       fonts:
         - asset: assets/fonts/SawarabiGothic-Regular.ttf
+
+  generate: true
