--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,7 +5,7 @@ description: This is literal thinking game for one.
 # pub.dev using `pub publish`. This is preferred for private packages.
 publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
-version: 1.0.6+7
+version: 1.6.0+21
 
 environment:
   sdk: ">=2.12.0-0 <2.15.0"
@@ -26,6 +26,13 @@ dependencies:
   flutter_spinkit: "^5.0.0"
   lottie: ^1.0.1
   cupertino_icons: ^1.0.2
+  firebase_core: ^1.3.0
+  firebase_remote_config: ^0.10.0+2
+  package_info: ^2.0.2
+  url_launcher: ^6.0.7
+  app_review: ^2.1.1+1
+  # launch_review: ^3.0.1 レビュー用
+  firebase_database: ^7.1.1
 
 dev_dependencies:
   flutter_test:
