--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,13 +1,14 @@
 buildscript {
-    ext.kotlin_version = '1.3.50'
+    ext.kotlin_version = '1.6.10'
     repositories {
         google()
         jcenter()
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.1.0'
+        classpath 'com.android.tools.build:gradle:4.2.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'com.google.gms:google-services:4.3.10'
     }
 }
 
@@ -29,3 +30,7 @@ subprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+// tasks.withType(JavaCompile) {
+//   options.compilerArgs << '-Xlint:unchecked'
+// }
