--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,10 +5,10 @@ description: This is literal thinking game for one.
 # pub.dev using `pub publish`. This is preferred for private packages.
 publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
-version: 1.6.0+21
+version: 3.1.0+59
 
 environment:
-  sdk: ">=2.12.0-0 <2.15.0"
+  sdk: ">=2.15.0-134.0.dev <3.0.0"
 
 dependencies:
   flutter:
@@ -16,34 +16,33 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   intl: ^ 0.17.0
-  flutter_hooks: ^0.16.0-nullsafety.0
-  hooks_riverpod: ^0.14.0+3
-  shared_preferences: ^2.0.5
-  google_mobile_ads: ^0.12.2
-  audioplayers: ^0.19.0
+  flutter_hooks: ^0.18.1
+  hooks_riverpod: ^0.14.0+4
+  shared_preferences: ^2.0.11
+  google_mobile_ads: ^1.1.0
+  audioplayers: ^0.20.1
   firebase_messaging: "^10.0.0"
-  awesome_dialog: ^2.1.0
-  flutter_spinkit: "^5.0.0"
-  lottie: ^1.0.1
+  awesome_dialog: ^2.1.2
+  flutter_spinkit: "^5.1.0"
+  lottie: ^1.2.2
   cupertino_icons: ^1.0.2
-  firebase_core: ^1.3.0
-  firebase_remote_config: ^0.10.0+2
+  firebase_core: ^1.10.6
+  firebase_remote_config: ^1.0.3
   package_info: ^2.0.2
-  url_launcher: ^6.0.7
+  url_launcher: ^6.0.17
   app_review: ^2.1.1+1
-  # launch_review: ^3.0.1 レビュー用
-  firebase_database: ^7.1.1
+  firebase_database: ^9.0.4
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_native_splash: ^1.1.8+4
+  flutter_native_splash: ^1.3.2
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
 flutter_native_splash:
-  image: "assets/icons/small-logo.jpg"
+  image: "assets/icons/small-logo.png"
   color: "000000"
 
 # The following section is specific to Flutter.
@@ -61,6 +60,11 @@ flutter:
       fonts:
         - asset: assets/fonts/NotoSerifJP-Regular.otf
         - asset: assets/fonts/NotoSerifJP-Bold.otf
+          weight: 700
+    - family: KaiseiOpti
+      fonts:
+        - asset: assets/fonts/KaiseiOpti-Regular.ttf
+        - asset: assets/fonts/KaiseiOpti-Bold.ttf
           weight: 700
     - family: YuseiMagic
       fonts:
