--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -74,7 +74,7 @@ flutter {
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
     implementation 'com.google.firebase:firebase-analytics:18.0.3'
-    implementation 'com.google.firebase:firebase-messaging:21.0.1'
+    // implementation 'com.google.firebase:firebase-messaging:21.0.1'
 }
 
 // tasks.withType(JavaCompile) {
